[gd_scene load_steps=16 format=3 uid="uid://dk3a6kuxav7qs"]

[ext_resource type="Script" path="res://main-menu/lvlSelect.gd" id="1_ehuy4"]
[ext_resource type="PackedScene" uid="uid://c2g1xhq21x1mf" path="res://main-menu/background.tscn" id="2_wnt66"]
[ext_resource type="FontFile" uid="uid://btk6lr8r58ga0" path="res://assets/gomarice_mix_bit_font.ttf" id="3_vtw7e"]
[ext_resource type="Texture2D" uid="uid://dty1aww7qgakx" path="res://assets/back.png" id="4_1iw3r"]
[ext_resource type="PackedScene" uid="uid://cqf8gssb1vndr" path="res://main-menu/button.tscn" id="4_e8l82"]
[ext_resource type="Texture2D" uid="uid://dd00rlolajdxg" path="res://assets/ui/buttons/lvlselect2.png" id="5_dggs2"]
[ext_resource type="Texture2D" uid="uid://cycdwu6fvqdo8" path="res://assets/ui/buttons/pressed/lvl1pressed.png" id="5_gg604"]
[ext_resource type="Texture2D" uid="uid://4pe0tdk5tojc" path="res://assets/ui/buttons/lvlselect3.png" id="6_3n3td"]
[ext_resource type="Texture2D" uid="uid://dcoyu5jlhvu5b" path="res://assets/ui/buttons/pressed/lvl2pressed.png" id="7_5x6gd"]
[ext_resource type="Texture2D" uid="uid://86k1gkb31vpw" path="res://assets/ui/buttons/lvlselect4.png" id="7_74l1j"]
[ext_resource type="Texture2D" uid="uid://xbej48fecfua" path="res://assets/ui/buttons/lvlselect5.png" id="8_incmw"]
[ext_resource type="Texture2D" uid="uid://pqs1d7mil0xf" path="res://assets/ui/buttons/pressed/lvl3pressed.png" id="9_eat3m"]
[ext_resource type="Texture2D" uid="uid://b81ttrq1771ow" path="res://assets/ui/buttons/pressed/lvl4pressed.png" id="11_dpt62"]
[ext_resource type="Texture2D" uid="uid://dib3fwv7yukyt" path="res://assets/ui/buttons/pressed/lvl5pressed.png" id="13_fy0r6"]
[ext_resource type="Texture2D" uid="uid://cugvh1jqn8dng" path="res://assets/back-pressed.png" id="15_n4k5f"]

[node name="lvlSelect" type="Node2D"]
script = ExtResource("1_ehuy4")

[node name="Background" parent="." instance=ExtResource("2_wnt66")]

[node name="Titel" type="Label" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 181.0
offset_top = 147.0
offset_right = 841.0
offset_bottom = 228.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)
size_flags_horizontal = 4
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("3_vtw7e")
theme_override_font_sizes/font_size = 80
text = "Select Level"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
offset_left = 218.0
offset_top = 272.0
offset_right = 394.0
offset_bottom = 312.0
scale = Vector2(4, 4)

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="lvl1" parent="VBoxContainer/HBoxContainer" instance=ExtResource("4_e8l82")]
layout_mode = 2
texture_pressed = ExtResource("5_gg604")
id = 1

[node name="lvl2" parent="VBoxContainer/HBoxContainer" instance=ExtResource("4_e8l82")]
layout_mode = 2
texture_normal = ExtResource("5_dggs2")
texture_pressed = ExtResource("7_5x6gd")
id = 2

[node name="lvl3" parent="VBoxContainer/HBoxContainer" instance=ExtResource("4_e8l82")]
layout_mode = 2
texture_normal = ExtResource("6_3n3td")
texture_pressed = ExtResource("9_eat3m")
id = 3

[node name="lvl4" parent="VBoxContainer/HBoxContainer" instance=ExtResource("4_e8l82")]
layout_mode = 2
texture_normal = ExtResource("7_74l1j")
texture_pressed = ExtResource("11_dpt62")
id = 4

[node name="lvl5" parent="VBoxContainer/HBoxContainer" instance=ExtResource("4_e8l82")]
layout_mode = 2
texture_normal = ExtResource("8_incmw")
texture_pressed = ExtResource("13_fy0r6")
id = 5

[node name="Back" type="TextureButton" parent="."]
offset_left = 439.0
offset_top = 459.0
offset_right = 560.0
offset_bottom = 505.0
scale = Vector2(2, 2)
texture_normal = ExtResource("4_1iw3r")
texture_pressed = ExtResource("15_n4k5f")

[connection signal="pressed" from="VBoxContainer/HBoxContainer/lvl1" to="." method="_on_lvl_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/lvl2" to="." method="_on_lvl_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/lvl3" to="." method="_on_lvl_3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/lvl4" to="." method="_on_lvl_4_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/lvl5" to="." method="_on_lvl_5_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
